--- a/src/calculation.html
+++ b/src/calculation.html
@@ -76,7 +76,7 @@
                     <a href="register.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <img class="icon-img rounded-circle" src="images/tbro3 8.jpg" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="register.html"> اتبرع الان  </a>
+                            <a class="nav-link  mx-1 fw-bold" href="register.html"> اتبرع الان </a>
                         </li>
                     </a>
                 </ul>
@@ -89,7 +89,7 @@
             <div class="container my-4">
                 <h2 class="h1">حساب زكاتك</h2>
                 <div class="row g-4">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="border border-1 border-muted rounded-3 p-4">
                             <h4 class="border-bottom bg-body-tertiary m-0 pb-2">النقود</h4>
                             <div class="mt-4">
@@ -105,7 +105,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 bg-">
+                        <div class="my-3 bg-">
+                            <div
+                                class="d-flex tot-calc align-items-center justify-content-between bg-body-tertiary rounded-3 p-4 ">
+                                <h2 class="bg-body-tertiary fw-bold">إجمالي قيمة الزكاة : <span id="total">0</span> جنيه
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-md-4">
                         <div class="border border-1 border-muted rounded-3 p-4">
                             <h4 class="border-bottom bg-body-tertiary m-0 pb-2">العقارات</h4>
                             <div class="mt-4">
@@ -137,16 +147,11 @@
                                 </h5>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="my-3">
-                    <div
-                        class="d-flex tot-calc align-items-center justify-content-between bg-body-tertiary rounded-3 p-4 ">
-                        <h2 class="bg-body-tertiary fw-bold">إجمالي قيمة الزكاة : <span id="total">0</span> جنيه </h2>
-                        <a href="register.html" class="btn btn-outline-success w-45">اتبرع الان</a>
-                    </div>
-                </div>
+                    </div> -->
+                <a href="register.html" class="btn w-100 mt-3 btn-outline-success w-45">اتبرع الان</a>
             </div>
+
+        </div>
         </div>
     </section>
 
@@ -186,16 +191,28 @@
                         <h2 class="h1 mb-4">تواصل معنا</h2>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-success fa- fa-location-pin"></i>
-                            <p class="me-2 m-0">13 شارع السلطان عبد العزيز - محطة الرمل بجوار القائد إبراهيم الدور
-                                الثاني - الاسكندرية - مصر</p>
+                            <p class="me-2 m-0">
+                            <ol class="pe-3" type="i">
+                                <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني –
+                                    شقة 9
+                                    – بجوار القائد إبراهيم.</li>
+                                <li class="mb-2 my-text-location">مركز محمد رشيد لعلاج الأورام – الدور الثاني –
+                                    الأزاريطة – على الترام أمام بريوني
+                                    للملابس.</li>
+                                <li class="mb-2 my-text-location">مستشفى برج العرب الجامعي، مدينة برج العرب الجامعي
+                                    الجديدة، المنطقة الأولى، خلف جهاز
+                                    المدينة.</li>
+                            </ol>
+                            </p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-primary fa- fa-phone"></i>
-                            <p class="me-2 m-0">01202223939</p>
+                            <p class="me-2 m-0"> 2034839839<span>+</span></p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-brands text-success fa-  fa-whatsapp"></i>
-                            <p class="me-2 m-0">01007770399</p>
+                            <p class="me-2 m-0">01202223939 / 01007770399</p>
+                            <!-- <p class="me-2 m-0">01007770399</p> -->
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-danger fa-  fa-envelope"></i>
