--- a/src/register.html
+++ b/src/register.html
@@ -90,7 +90,7 @@
         <form id="formFristRegister" class=" p-3 w-100">
             <!-- <h3 class="text-center fs-2 fw-bolder border-bottom pb-3 border-3 my-2 text-success">اول مرة تسجل ؟؟</h3> -->
             <div class="my-2">
-                <label for="userName" class="pb-1 fw-bold fs-5"> الاسم ثلاثي باللغة الانجليزية :</label>
+                <label for="userName" class="pb-1 fw-bold fs-5"> الاسم ثلاثي باللغة العربية :</label>
                 <input class="form-control" type="text" name="userName" id="userName" value="">
             </div>
             <div class="my-2">
@@ -147,16 +147,27 @@
                         <h2 class="h1 mb-4">تواصل معنا</h2>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-success fa- fa-location-pin"></i>
-                            <p class="me-2 m-0">13 شارع السلطان عبد العزيز - محطة الرمل بجوار القائد إبراهيم الدور
-                                الثاني - الاسكندرية - مصر</p>
+                            <p class="me-2 m-0">
+                            <ol class="pe-3" type="i">
+                                <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني – شقة 9
+                                    – بجوار القائد إبراهيم.</li>
+                                <li class="mb-2 my-text-location">مركز محمد رشيد لعلاج الأورام – الدور الثاني –
+                                    الأزاريطة – على الترام أمام بريوني
+                                    للملابس.</li>
+                                <li class="mb-2 my-text-location">مستشفى برج العرب الجامعي، مدينة برج العرب الجامعي
+                                    الجديدة، المنطقة الأولى، خلف جهاز
+                                    المدينة.</li>
+                            </ol>
+                            </p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-primary fa- fa-phone"></i>
-                            <p class="me-2 m-0">01202223939</p>
+                            <p class="me-2 m-0"> 2034839839<span>+</span></p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-brands text-success fa-  fa-whatsapp"></i>
-                            <p class="me-2 m-0">01007770399</p>
+                            <p class="me-2 m-0">01202223939 / 01007770399</p>
+                            <!-- <p class="me-2 m-0">01007770399</p> -->
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-danger fa-  fa-envelope"></i>
