--- a/src/videos.html
+++ b/src/videos.html
@@ -177,16 +177,27 @@
                         <h2 class="h1 mb-4">تواصل معنا</h2>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-success fa- fa-location-pin"></i>
-                            <p class="me-2 m-0">13 شارع السلطان عبد العزيز - محطة الرمل بجوار القائد إبراهيم الدور
-                                الثاني - الاسكندرية - مصر</p>
+                            <p class="me-2 m-0">
+                            <ol class="pe-3" type="i">
+                                <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني – شقة 9
+                                    – بجوار القائد إبراهيم.</li>
+                                <li class="mb-2 my-text-location">مركز محمد رشيد لعلاج الأورام – الدور الثاني –
+                                    الأزاريطة – على الترام أمام بريوني
+                                    للملابس.</li>
+                                <li class="mb-2 my-text-location">مستشفى برج العرب الجامعي، مدينة برج العرب الجامعي
+                                    الجديدة، المنطقة الأولى، خلف جهاز
+                                    المدينة.</li>
+                            </ol>
+                            </p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-primary fa- fa-phone"></i>
-                            <p class="me-2 m-0">01202223939</p>
+                            <p class="me-2 m-0"> 2034839839<span>+</span></p>
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-brands text-success fa-  fa-whatsapp"></i>
-                            <p class="me-2 m-0">01007770399</p>
+                            <p class="me-2 m-0">01202223939 / 01007770399</p>
+                            <!-- <p class="me-2 m-0">01007770399</p> -->
                         </div>
                         <div class="d-flex my-3 align-items-center">
                             <i class="fa-solid text-danger fa-  fa-envelope"></i>
