--- a/src/calculation.html
+++ b/src/calculation.html
@@ -93,7 +93,7 @@
                         <div class="border border-1 border-muted rounded-3 p-4">
                             <h4 class="border-bottom bg-body-tertiary m-0 pb-2">النقود</h4>
                             <div class="mt-4">
-                                <p class="m-0 pb-1">أدخل قيمة النقود التي تملكها</p>
+                                <p class="m-0 pb-1">أدخل قيمة النقود التي تملكها <span class="text-danger">(اقل قيمة 50 جنيها)</span></p>
                                 <div class="d-flex justify-content-between">
                                     <input value="" name="" id="moneyInp" placeholder="أدخل القيمة . . ." type="number"
                                         class="form-control w-50">
