--- a/src/cancel.html
+++ b/src/cancel.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/rwd.css">
     <link rel="stylesheet" href="css/animate.css">
 
-    <title>Apoc 3939/ تم التبرع بنجاح </title>
+    <title>Apoc 3939/ خطأ في العملية </title>
 </head>
 
 <body>
@@ -85,8 +85,8 @@
     </nav>
 
     <section class="bg-body-tertiary container text-center m-auto p-4 rounded-3 shadow my-3 bg">
-        <h1 class="fw-bold my-3 text-success">تم التبرع بنجاح </h1>
-        <p class="fw-bold h5">نشكركم علي تبرعكم وتقبل الله منا ومنكم صالح الاعمال</p>
+        <h1 class="fw-bold my-3 text-danger"> خطأ في العملية !!!</h1>
+        <p class="fw-bold h5">برجاء المحاولة مرة اخري</p>
         <img class="w-50 mt-3 rounded-circle" src="images/tbro3 3.jpg" alt="">
     </section>
 
