--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
                     </li>
                     <!-- <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="src/success.html"> success </a>
+                        <a class="nav-link text- fw-bold" href="src/cancel.html"> success </a>
                     </li> -->
                 </ul>
                 <ul class="navbar-nav me-auto mb-2 bg- mb-lg-0">
@@ -354,13 +354,11 @@
                             <h2 class="h1 mb-4 introHead bg- border-bottom pb-2 border-1">ادعم <span
                                     class="text-warning">منة</span></h2>
                             <p>منة بطلة من ابطال مستشفى برج العرب الجامعي ، عمرها 13 سنة ، في الصف الثاني ...</p>
-                            <p>تم جمع 504,150 جنيه من 670,000 جنيه</p>
+                            <p>تم جمع <span id="collectMoney">504150</span> جنيه من <span id="totalMoney">670000</span>
+                                جنيه</p>
                             <div class="bg- text-center">
-                                <div>
-                                    <div class="progress my-3" role="progressbar" aria-label="Success example"
-                                        aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-success" style="width: 75%">75%</div>
-                                    </div>
+                                <div class="progress mt-2 mb-5 bg-">
+                                    <div class="progress-bar bg-success">75%</div>
                                 </div>
                                 <div>
                                     <a href="src/register.html"><button
@@ -384,10 +382,11 @@
                         <div class="border border-1 border-muted rounded-3 p-4">
                             <h4 class="border-bottom bg-body-tertiary m-0 pb-2">النقود</h4>
                             <div class="mt-4">
-                                <p class="m-0 pb-1">أدخل قيمة النقود التي تملكها</p>
+                                <p class="m-0 pb-1"> أدخل قيمة النقود التي تملكها <span class="text-danger">(اقل قيمة 50
+                                        جنيها)</span></p>
                                 <div class="d-flex justify-content-between">
-                                    <input value="" name="" id="moneyInp" placeholder="أدخل القيمة . . ." type="number"
-                                        class="form-control w-50">
+                                    <input value="" minlength="3" name="" id="moneyInp" placeholder="أدخل القيمة . . ."
+                                        type="number" class="form-control w-50">
                                     <button id="moneyBtn" onclick="getData()" class="btn btn-primary">اعرف
                                         القيمة</button>
                                 </div>
