--- a/src/photos.html
+++ b/src/photos.html
@@ -17,7 +17,8 @@
 <body>
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
-            <a class="navbar-brand" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img class="rounded-circle"
+                    src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -44,20 +45,20 @@
                     <!-- <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="src/success.html"> success </a>
                     </li> -->
+
+
                 </ul>
                 <ul class="navbar-nav me-auto mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="images/حاسبة-زكاة-المال.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
                                 زكاتك</a>
                         </li>
                     </a>
                     <a href="register.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="images/tbro3 8.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
                         </li>
                     </a>
@@ -67,22 +68,20 @@
     </nav>
     <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container  bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
-                    alt=""></a>
+            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-circle"
+                    src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="images/حاسبة-زكاة-المال.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
                                 زكاتك</a>
                         </li>
                     </a>
                     <a href="register.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="images/tbro3 8.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
                         </li>
                     </a>
@@ -90,29 +89,79 @@
             </div>
         </div>
     </nav>
-   
+
 
     <section class="my-5">
-        <div class="container">
-            <div class="row g-3">
+        <div id="imgContainer" class="container">
+            <div class="row justify-content-center g-3">
                 <div class="col-md-3">
                     <div>
-                        <img class="rounded-2 w-100" src="images/slider 1.jpg" alt="">
+                        <img class="rounded-2 w-100" src="images/tbro3 12.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div>
-                        <img class="rounded-2 w-100" src="images/slider 2.jpg" alt="">
+                        <img class="rounded-2 w-100" src="images/tbro3 14.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div>
-                        <img class="rounded-2 w-100" src="images/slider 3.jpg" alt="">
+                        <img class="rounded-2 w-100" src="images/tbro3 15.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div>
-                        <img class="rounded-2 w-100" src="images/slider 4.jpg" alt="">
+                        <img class="rounded-2 w-100" src="images/tbro3 16.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 17.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 18.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 19.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 20.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 21.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 9.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 4.jpeg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3 23.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img class="rounded-2 w-100" src="images/tbro3  29.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -156,7 +205,8 @@
                             <i class="fa-solid text-success fa- fa-location-pin"></i>
                             <p class="me-2 m-0">
                             <ol class="pe-3" type="i">
-                                <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني – شقة 9
+                                <li class="mb-2 my-text-location"> 13 ش عبد الحميد بدوي – محطة الرمل – الدور الثاني –
+                                    شقة 9
                                     – بجوار القائد إبراهيم.</li>
                                 <li class="mb-2 my-text-location">مركز محمد رشيد لعلاج الأورام – الدور الثاني –
                                     الأزاريطة – على الترام أمام بريوني
