--- a/src/success.html
+++ b/src/success.html
@@ -17,8 +17,8 @@
 <body>
     <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div data-wow-delay=".3s" class="container  bg-">
-            <a class="navbar-brand" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
-                    alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img class="rounded-circle"
+                    src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -42,18 +42,23 @@
                     <li class="nav-item">
                         <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
                     </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link text- fw-bold" href="src/success.html"> success </a>
+                    </li> -->
+
+
                 </ul>
                 <ul class="navbar-nav me-auto mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <img class="icon-img rounded-circle" src="images/حاسبة-زكاة-المال.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
                                 زكاتك</a>
                         </li>
                     </a>
                     <a href="register.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <img class="icon-img rounded-circle" src="images/tbro3 8.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
                         </li>
                     </a>
@@ -63,20 +68,21 @@
     </nav>
     <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container  bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-" src="images/logo-Apoc-2022.png"
+            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-circle" src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png"
                     alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
-                    <a href="../index.html">
-                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <i class="fa-solid fa-house fa-lg text-success pointer"></i>
-                            <a class="nav-link  mx-1 fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
-                        </li>
-                    </a>
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <img class="icon-img rounded-circle" src="images/حاسبة-زكاة-المال.jpg" alt="">
-                            <a class="nav-link  mx-1 fw-bold" href="calculation.html"> احسب زكاتك </a>
+                            <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
+                            <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
+                                زكاتك</a>
+                        </li>
+                    </a>
+                    <a href="register.html">
+                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
+                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
                         </li>
                     </a>
                 </ul>
