--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 <body class="bg-">
     <nav id="mainNav" class="navbar d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
-        <div class="container  bg-">
-            <a class="navbar-brand" href="#"><img class="rounded-" src="src/images/logo-Apoc-2022.png" alt=""></a>
+        <div class="container">
+            <a class="navbar-brand" href="#"><img class="rounded-circle"
+                    src="src/images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -50,7 +51,7 @@
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/حاسبة-زكاة-المال.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="src/calculation.html">احسب
                                 زكاتك</a>
                         </li>
@@ -58,7 +59,7 @@
                     <a href="#tbro3">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/tbro3 8.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="#tbro3">اتبرع الآن</a>
                         </li>
                     </a>
@@ -100,7 +101,7 @@
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/حاسبة-زكاة-المال.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="src/calculation.html">احسب
                                 زكاتك</a>
                         </li>
@@ -108,7 +109,7 @@
                     <a href="#tbro3">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/tbro3 8.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="#tbro3">اتبرع الآن</a>
                         </li>
                     </a>
@@ -119,8 +120,8 @@
 
     <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container  bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="index.html"><img class="rounded-" src="src/images/logo-Apoc-2022.png"
-                    alt=""></a>
+            <a class="navbar-brand bg-" href="index.html"><img class="rounded-circle"
+                    src="src/images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
                 <!-- <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -147,7 +148,7 @@
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/حاسبة-زكاة-المال.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="src/calculation.html">احسب
                                 زكاتك</a>
                         </li>
@@ -155,7 +156,7 @@
                     <a href="#tbro3">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/tbro3 8.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="#tbro3">اتبرع الآن</a>
                         </li>
                     </a>
@@ -165,8 +166,8 @@
     </nav>
     <nav id="scrollSmNav" class="navbar d-none fixed-top bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="index.html"><img class="rounded-" src="src/images/logo-Apoc-2022.png"
-                    alt=""></a>
+            <a class="navbar-brand bg-" href="index.html"><img class="rounded-circle"
+                    src="src/images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
                 <!-- <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -189,11 +190,11 @@
                     </li>
                     
                 </ul> -->
-                <ul class="navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
+                <ul class="navbar-nav text-center  mb-2 bg- mb-lg-0">
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/حاسبة-زكاة-المال.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="src/calculation.html">احسب
                                 زكاتك</a>
                         </li>
@@ -201,7 +202,7 @@
                     <a href="#tbro3">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-money-bill-trend-up fa-2x text-success pointer"></i> -->
-                            <img class="icon-img rounded-circle" src="src/images/tbro3 8.jpg" alt="">
+                            <img class="icon-img rounded-circle" src="src/images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="#tbro3">اتبرع الآن</a>
                         </li>
                     </a>
@@ -209,17 +210,9 @@
             </div>
         </div>
     </nav>
-
+    <!-- 0000000000000000000000 -->
     <header id="main" class="d-flex overflow-hidden align-items- position-relative justify-content-start">
-        <!-- <div class="layer position-absolute top-0 start-0 end-0 bottom-0">
-        </div> -->
         <div b class="position-absolute head-container d-flex flex-column me-4 justify-content-center">
-            <!-- <div>
-                <h1 class="h1 mb-3 text-success">جمعية مستشفى سرطان اطفال اسكندرية</h1>
-                <h2 class="fs-3 mb-3">علاج سرطان الاطفال بالمجان</h2>
-                <p class="text-muted lead fw-medium">كل تبرعاتك بنسبة 100% تمنح اطفالنا فرصة اكبر للحياة والتغلب علي
-                    المرض</p>
-            </div> -->
             <div class="d-flex flex-column bg-">
                 <a href="#whoWeAre" class="text-decoration-none w-25 my-1"><button
                         class="btn delay-2s btn-warning position- fw-bolder py-3 rounded-start-5">قصتنا
@@ -230,9 +223,8 @@
             </div>
         </div>
     </header>
-
-    <!-- ///// -->
-    <div class="bg- d-flex justify-content- my-3 rounded-end-pill">
+    <!-- 0000000000000000000000 -->
+    <div class="bg- d-flex my-3 rounded-end-pill">
         <!-- <h1 class="">عن الجمعية</h1> -->
         <div id="carouselExampleFade" class="carousel m-0 p-0 m-auto bg-warning h-100 slide carousel-fade">
             <div class="carousel-inner p-0 m-0 bg-warning">
@@ -271,17 +263,14 @@
             </div>
         </div>
     </div>
-    <!-- ///// -->
-
     <div id="toUp"
-        class="bg-primary opacity-0 rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
+        class="bg-mainColor opacity-0 rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
         <a href="#main"><i class="fa-solid text-white fa-arrow-up fa-xl"></i></a>
     </div>
     <div id="dropNav"
-        class="bg-primary d-none rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
+        class="bg-mainColor d-none rounded-circle pointer d-flex align-items-center justify-content-center position-fixed">
         <i class="fa-solid text-white fa-bars fa-xl"></i>
     </div>
-
     <div class="res-nav overflow-hidden d-none position-fixed top-0 end-0 start-0 bottom-0 vh-100">
         <div class="bg- d-flex flex-column align-items-center justify-content-center w-100 h-100">
             <i id="closeDropNav" class="fa-solid fa-2xl mb-4 pointer fa-xmark"></i>
@@ -299,7 +288,7 @@
                     <a class="nav-link text- fw-bold" href="src/videos.html"> الفيدوهات </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text- fw-bold" href="#tbro3"> اتبرع الآن</a>
+                    <a class="nav-link text- fw-bold" href="src/register.html"> اتبرع الآن</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
@@ -307,7 +296,7 @@
             </ul>
         </div>
     </div>
-
+    <!-- 0000000000000000000000 -->
     <section id="whoWeAre" class="d- bg-body-tertiary py-3 my-5">
         <div class="container">
             <div class="row align-items-center">
@@ -327,18 +316,14 @@
                     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="5000">
-                                <img src="src/images/logo.jpg" class="d-block rounded-3 w-100" alt="...">
+                                <img src="src/images/final img/من-نحن-1.png" class="d-block rounded-3 w-100" alt="...">
                             </div>
-                            <div class="carousel-item" data-bs-interval="2500">
-                                <img src="src/images/tbro3.jpg" class="d-block w-100 rounded-3" alt="...">
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="src/images/final img/من-نحن-2.png" class="d-block w-100 rounded-3" alt="...">
                             </div>
-                            <div class="carousel-item" data-bs-interval="2500">
-                                <img src="src/images/tbro3 2.jpg" class="d-block w-100 rounded-3" alt="...">
+                            <div class="carousel-item" data-bs-interval="3000">
+                                <img src="src/images/final img/من-نحن-3.png" class="d-block w-100 rounded-3" alt="...">
                             </div>
-                            <div class="carousel-item" data-bs-interval="2500">
-                                <img src="src/images/tbro3 3.jpg" class="d-block w-100 rounded-3" alt="...">
-                            </div>
-
                         </div>
 
                     </div>
@@ -370,7 +355,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="p-2">
-                            <img src="src/images/tbro3 2.jpg" class="w-100 rounded-3" alt="">
+                            <img src="src/images/final img/Support-Menna.png" class="w-100 rounded-3" alt="">
                         </div>
                     </div>
                 </div>
@@ -443,7 +428,7 @@
             </div>
         </div>
     </section>
-
+    <!-- 0000000000000000000000 -->
     <section id="tbro3" class="d- my-5">
 
         <div class="container">
@@ -451,7 +436,7 @@
             <div class="row g-3 justify-content-center bg-">
                 <div class="col-md-6 col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
-                        <img src="src/images/tbro3 23.jpg" class="card-img-top" alt="...">
+                        <img src="src/images/final img/سهم-علاج-كيماوي.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
                             <h5 class="card-title bg-success text-white py-2 text-center rounded-2">سهم علاج كيماوي
                             </h5>
@@ -473,7 +458,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
-                        <img src="src/images/tbro3 13.jpg" class="card-img-top" alt="...">
+                        <img src="src/images/final img/سهم-مفصل-تعويضي.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
                             <h5 class="card-title bg-success text-white py-2 text-center rounded-2">سهم مفاصل تعويضية
                             </h5>
@@ -496,7 +481,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
-                        <img src="src/images/tbro3  29.jpg" class="card-img-top" alt="...">
+                        <img src="src/images/final img/سهم-كفالة-سرير.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
                             <h5 class="card-title bg-success text-white py-2 text-center rounded-2">سهم كفالة سرير</h5>
                             <div class="card-text bg- d-flex align-items-center justify-content-">
@@ -517,7 +502,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
-                        <img src="src/images/tbro3 8.jpg" class="card-img-top" alt="...">
+                        <img src="src/images/final img/سهم-الصدقة-الجارية.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
                             <h5 class="card-title bg-success text-white py-2 text-center rounded-2">سهم الصدقة الجارية
                             </h5>
@@ -539,7 +524,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
-                        <img src="src/images/tbro3 14.jpg" class="card-img-top" alt="...">
+                        <img src="src/images/final img/سهم-مستلزمات-طبية.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
                             <h5 class="card-title bg-success text-white py-2 text-center rounded-2">سهم مستلزمات طبية
                             </h5>
@@ -561,7 +546,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 bg-">
                     <div class="card pointer p-3 m-auto">
-                        <img src="src/images/tbro3 17.jpg" class="card-img-top" alt="...">
+                        <img src="src/images/final img/تبرع-عام.png" class="card-img-top" alt="...">
                         <div class="card-body p-0 mt-2">
                             <h5 class="card-title bg-success text-white py-2 text-center rounded-2">تبرع عــــــــام
                             </h5>
@@ -592,7 +577,7 @@
             </div>
         </div>
     </section>
-
+    <!-- 0000000000000000000000 -->
     <footer id="footer" class="w-100 d- py-5 bg-body-tertiary">
         <div>
             <div class="container bg-">
@@ -661,9 +646,7 @@
             </div>
         </div>
     </footer>
-
-    <!-- <p>Lorem ipsum dolor sit.</p> -->
-
+    <!-- 0000000000000000000000 -->
     <script src="src/js/bootstrap.bundle.min.js"></script>
     <script src="src/js/jquery-3.6.4.min.js"></script>
     <script src="src/js/wow.min.js"></script>
