--- a/src/allUsersForAdmin.html
+++ b/src/allUsersForAdmin.html
@@ -15,33 +15,51 @@
 </head>
 
 <body>
-    <nav id="mainNav" class="navbar d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
-        <div data-wow-delay=".3s" class="container wow fadeInDown bg-">
-            <a class="navbar-brand" href="../index.html"><img class="rounded-circle" src="images/tbro3 9.jpg"
-                    alt=""></a>
-            <div class="collapse navbar-collapse bg-" id="navbarSupportedContent">
-                <ul class="navbar-nav text-dark ms-auto mb-2 mb-lg-0">
+    <nav id="mainNav" class="navbar fixed- d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
+        <div data-wow-delay=".3s" class="container  bg-">
+            <a class="navbar-brand" href="../index.html"><img class="rounded-circle"
+                    src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
+            <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
+                <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link text- active fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="../index.html">من نحن</a>
+                        <a class="nav-link text- fw-bold" href="about.html">عن الجمعية</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link text- fw-bold" href="#"> العناوين </a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link text- fw-bold" href="photos.html"> البوم الصور </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="../index.html"> اتبرع الآن</a>
+                        <a class="nav-link text- fw-bold" href="videos.html"> الفيدوهات </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text- fw-bold" href="../index.html"> تواصل معنا</a>
+                        <a class="nav-link text- fw-bold" href="register.html"> اتبرع الآن</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text- fw-bold" href="#footer"> تواصل معنا</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link text- fw-bold" href="src/success.html"> success </a>
+                    </li> -->
 
 
                 </ul>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
-                            <i class="fa-solid fa-calculator fa-2x text-success pointer"></i>
+                            <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
                                 زكاتك</a>
+                        </li>
+                    </a>
+                    <a href="register.html">
+                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
+                            <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
                         </li>
                     </a>
                 </ul>
@@ -49,36 +67,26 @@
         </div>
     </nav>
     <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
-        <div data-wow-delay=".3s" class="wow p-2 fadeInDown bg- text-center">
-            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-circle" src="images/tbro3 9.jpg"
+        <div class="container  bg- d-flex flex-nowrap">
+            <a class="navbar-brand bg-" href="../index.html"><img class="rounded-circle" src="images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png"
                     alt=""></a>
-            <ul class="navbar-nav p-0 px-2 mt-2 bg- w-100 d-flex align-items-center justify-content-between mb-lg-0">
-                <div class="bg- w-">
+            <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
+                <ul class="navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
                     <a href="calculation.html">
-                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
-                            <i class="fa-solid fa-calculator fa-lg text-success pointer"></i>
+                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <img class="icon-img rounded-circle" src="images/final img/احسب-زكاتك.png" alt="">
                             <a class="nav-link  mx-1 fw-bold" aria-current="page" href="calculation.html">احسب
                                 زكاتك</a>
                         </li>
                     </a>
-                </div>
-                <div class="bg- w-">
                     <a href="register.html">
-                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
-                            <i class="fa-solid fa-money-bill-trend-up fa-lg text-success pointer"></i>
+                        <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
+                            <img class="icon-img rounded-circle" src="images/final img/اتبرع-الان..png" alt="">
                             <a class="nav-link  mx-1 fw-bold" href="register.html">اتبرع الآن</a>
                         </li>
                     </a>
-                </div>
-                <div class="bg w-">
-                    <a href="../index.html">
-                        <li class="nav-item d-flex flex-column align-items-center justify-content-center">
-                            <i class="fa-solid fa-house fa-lg text-success pointer"></i>
-                            <a class="nav-link  mx-1 fw-bold" aria-current="page" href="../index.html">الرئيسية</a>
-                        </li>
-                    </a>
-                </div>
-            </ul>
+                </ul>
+            </div>
         </div>
     </nav>
 
