--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="bg-">
     <nav id="mainNav" class="navbar d- bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container">
-            <a class="navbar-brand" href="#"><img class="rounded-circle"
+            <a class="navbar-brand" href="#"><img class="rounded-"
                     src="src/images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse d-flex align-items-center bg-" id="navbarSupportedContent">
                 <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
@@ -120,7 +120,7 @@
 
     <nav id="smNav" class="navbar d-none bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container  bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="index.html"><img class="rounded-circle"
+            <a class="navbar-brand bg-" href="index.html"><img class="-circle"
                     src="src/images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
                 <!-- <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
@@ -144,7 +144,7 @@
                     </li>
                     
                 </ul> -->
-                <ul class="navbar-nav m-0 p-0 text-center bg- m-auto mb-2 bg- mb-lg-0">
+                <ul class="navbar-nav m-0 p-0 text-center bg- ms-3 me-auto mb-2 bg- mb-lg-0">
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
@@ -166,7 +166,7 @@
     </nav>
     <nav id="scrollSmNav" class="navbar d-none fixed-top bg-white navbar-expand-lg top-0 start-0 end-0 bg-body-">
         <div class="container bg- d-flex flex-nowrap">
-            <a class="navbar-brand bg-" href="index.html"><img class="rounded-circle"
+            <a class="navbar-brand bg-" href="index.html"><img class="-circle"
                     src="src/images/final img/لوجو-الجمعية-الصغير-اللي-فوق.png" alt=""></a>
             <div class="collapse navbar-collapse  d-flex align-items-center bg-" id="navbarSupportedContent">
                 <!-- <ul class="navbar-nav text-dark bg- mt-0 m-auto mb-2 mb-lg-0">
@@ -190,7 +190,7 @@
                     </li>
                     
                 </ul> -->
-                <ul class="navbar-nav text-center  mb-2 bg- mb-lg-0">
+                <ul class=" me-3 navbar-nav text-center  mb-2 bg- mb-lg-0">
                     <a href="src/calculation.html">
                         <li class="nav-item d-flex flex-column align-items-center mx-2 justify-content-center">
                             <!-- <i class="fa-solid fa-calculator fa-2x text-success pointer"></i> -->
